# appfwk-externals

./: README.md
cmake-externalproject/: CMakeLists.txt  setup.sh
dunedaq-spack-repo/: README.md  repo.yaml
ups/multi-product/: build-all.sh  build-one.sh
ups/multi-product/cppzmq/: CMakeLists.txt
ups/multi-product/cppzmq/cppzmq/: CMakeLists.txt
ups/multi-product/cppzmq/ups/: product_deps
ups/multi-product/double_conversion/double_conversion/: CMakeLists.txt
ups/multi-product/double_conversion/ups/: product_deps
ups/multi-product/ers/ers/: CMakeLists.txt
ups/multi-product/ers/ups/: product_deps
ups/multi-product/fmt/fmt/: CMakeLists.txt
ups/multi-product/fmt/ups/: product_deps
ups/multi-product/folly/: CMakeLists.txt
ups/multi-product/folly/folly/: CMakeLists.txt  folly-make-relocatable.diff
ups/multi-product/folly/ups/: product_deps
ups/multi-product/glog/glog/: CMakeLists.txt
ups/multi-product/glog/ups/: product_deps
ups/multi-product/googletest/googletest/: CMakeLists.txt
ups/multi-product/googletest/ups/: product_deps
ups/multi-product/libevent/libevent/: CMakeLists.txt
ups/multi-product/libevent/ups/: product_deps
ups/multi-product/msgpackc/: CMakeLists.txt
ups/multi-product/msgpackc/msgpackc/: CMakeLists.txt
ups/multi-product/msgpackc/ups/: product_deps
ups/multi-product/nlohmann_json/: CMakeLists.txt
ups/multi-product/nlohmann_json/nlohmann_json/: CMakeLists.txt
ups/multi-product/nlohmann_json/ups/: product_deps
ups/multi-product/zmq/: CMakeLists.txt
ups/multi-product/zmq/ups/: product_deps
ups/multi-product/zmq/zmq/: CMakeLists.txt
